# factd

./: .tasks  CMakeLists.txt  README.md
src/: factd.c
src/client/: fact.c
src/daemon/: factd.c
